--- a/src/components/home/Banner.css
+++ b/src/components/home/Banner.css
@@ -5,7 +5,7 @@
     justify-content: center;
 
 
-    background-image: url('../../../public/images/rainbow.jpg');
+    background-image: url('/public/images/rainbow.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
